Revert previous fix, see if it removes the scrollbar on firefox

--- a/sunpy_sphinx_theme/sunpy/static/style.css
+++ b/sunpy_sphinx_theme/sunpy/static/style.css
@@ -63,14 +63,6 @@ div.section::before {
   margin-bottom: 3em;
 }
 
-.row {
-  overflow-x: scroll;
-}
-
-.row::-webkit-scrollbar {
-  display: none;
-}
-
 /* Navbar */
 
 .navbar {
